[tool.poetry]
name = "llms-for-meded"
version = "0.1.0"
description = "Teaching about LLMs"
authors = ["David Liebovitz <DavidL@northwestern.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.0"
openai = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
